# brsc

./: AUTHORS.md  CONTRIBUTING.md  Cargo.toml  DOCS.sh  INSTALL.sh  README.md  TEST.sh  TESTING.md  TODO  UNINSTALL.sh
.github/workflows/: rust.yml
src/: calculator.rs  cli.rs  error.rs  main.rs  tests.rs
src/cli/: cli.rs  mod.rs
src/core/: calculator.rs  function.rs  mod.rs  parse.rs  var.rs
src/debug/: test.rs
src/error/: error.rs  mod.rs
