[package]
name = "brsc"
version = "0.1.0"
edition = "2021"

#i recomend installing like this
[profile.release]
strip = true
opt-level = 3 #change this to z if you want to make this lighter (but less performant)
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
meval = "0.2.0"
