[package]
name = "brsc"
version = "0.9.1"
edition = "2021"
description = "brsc (Basic Rust Calculator) is a powerful and modern CLI calculator inspired by the classic bc (Basic Calculator) and built with Rust."
authors = ["takashialpha <takashialpha@protonmail.com>"]
license = "Apache License 2.0"
repository = "https://github.com/takashialpha/brsc"

# i recomend installing like this
[profile.release]
strip = true
opt-level = 3 # change this to z if you want to make this lighter (but less performant)
lto = true
codegen-units = 1
panic = "abort"
debug = false
overflow-checks = false
incremental = false

[dependencies]
clap = { version = "4.5.22", features = ["derive"] }
meval = "0.2.0"
termion = "4.0.3"

[dev-dependencies]
# criterion = "0.5.1"
# proptest = "1.5.0"
